# sfml-game-of-life

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
cmake/: FindSFML.cmake
include/: grid.hpp  tilemap.hpp
src/: main.cpp
